--- a/lombok.config
+++ b/lombok.config
@@ -1,4 +1,4 @@
-config.stopBubbling = true
-lombok.anyconstructor.addconstructorproperties = false
+lombok.anyConstructor.addConstructorProperties = false
 lombok.addLombokGeneratedAnnotation = true
 lombok.addSuppressWarnings = false
+config.stopBubbling = true
