--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -12,6 +12,7 @@
     </parent>
 
     <artifactId>stats</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -19,4 +20,6 @@
         <module>stats-server</module>
         <module>stats-client</module>
     </modules>
+
+    <name>stats</name>
 </project>
