--- a/stats/stats-client/pom.xml
+++ b/stats/stats-client/pom.xml
@@ -19,6 +19,7 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>stats-dto</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
