--- a/stats/stats-dto/pom.xml
+++ b/stats/stats-dto/pom.xml
@@ -13,6 +13,7 @@
     </parent>
 
     <artifactId>stats-dto</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -37,6 +38,13 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>  <!-- ЭТА СТРОКА РЕШАЕТ ПРОБЛЕМУ -->
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
