--- a/stats/stats-server/pom.xml
+++ b/stats/stats-server/pom.xml
@@ -19,6 +19,8 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>stats-dto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -54,6 +56,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <mainClass>ru.practicum.statsserver.StatsServerApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
