Дипломный проект. Этап2. Основной сервис. Правки после ревью

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       timeout: 5s
       retries: 5
 
-  main-service:
+  ewm-service:
     build:
       context: .
       dockerfile: main-service/Dockerfile
