--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-#
-spring.profiles.active=dev
-
-#
+# Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-main
 spring.datasource.username=postgres
 spring.datasource.password=password
@@ -13,12 +10,12 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-#
+# Server
 server.port=8080
 
 # Stats server URL
-stats-server.url=http://stats-server:9090
+stats-server.url=http://localhost:9090
 
-#
+# Logging
 logging.level.ru.practicum=INFO
 logging.level.org.hibernate.SQL=DEBUG
